k8s/controller.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: reference-class
spec:
  controllerName: github.com/gke-labs/gateway-api-reference-implementation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gari-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gari-controller
  template:
    metadata:
      labels:
        app: gari-controller
    spec:
      serviceAccountName: gari-controller
      containers:
      - name: controller
        image: gari-controller:latest
        args: []
